--- a/themes/custom_minimal/page.html
+++ b/themes/custom_minimal/page.html
@@ -16,7 +16,7 @@
     {{ timestamp(metadata.formatted_date) }}
     {% block buttons %}
     <div class="buttons" style="float:right">
-      <a href="https://twitter.com/share" class="twitter-share-button" data-url="{{ link }}" data-text="{{ link }}">Tweet</a>
+      <a href="https://twitter.com/share" class="twitter-share-button" data-via="shomah4a">Tweet</a>
       <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
     </div>
     {% endblock %}
