--- a/themes/custom_minimal/aggregated.html
+++ b/themes/custom_minimal/aggregated.html
@@ -17,6 +17,12 @@
     {{ tinkerer_relbar() }}
     {%- for metadata in posts %}
         {{ timestamp(metadata.formatted_date) }}
+
+        {% set page_url = pathto(metadata.link) %}
+
+        <div class="buttons" style="float:right">
+          <a href="https://twitter.com/share" class="twitter-share-button" data-url="{{ page_url }}" data-text="{{ page_url }}" data-via="shomah4a">Tweet</a>
+        </div>
         {{ metadata.body }}
         {{ post_meta(metadata, metadata.comment_count) }}
         {%- if not loop.last %}<div class="separator post_separator"></div>{%- endif %}
@@ -25,5 +31,17 @@
     <div class="archive_link">
         <a href="{{ pathto('archive') }}">{{ archivechar }}{{ archive_title }}{{ archivechar }}</a>
     </div>
+    <script><!--
+      var items = document.getElementsByClassName('twitter-share-button');
+
+      for (var idx=0; idx<items.length; idx++)
+      {
+        var item = items[idx];
+        item.setAttribute('data-url', document.baseURI + item.getAttribute('data-url'));
+        item.setAttribute('data-text', document.baseURI + item.getAttribute('data-text'));
+      }
+
+    --></script>
+    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 {% endblock %}
 
