--- a/themes/custom_minimal/aggregated.html
+++ b/themes/custom_minimal/aggregated.html
@@ -21,7 +21,7 @@
         {% set page_url = pathto(metadata.link) %}
 
         <div class="buttons" style="float:right">
-          <a href="https://twitter.com/share" class="twitter-share-button" data-url="{{ page_url }}" data-via="shomah4a">Tweet</a>
+          <a href="https://twitter.com/share" class="twitter-share-button" data-url="{{ page_url }}" data-text="{{ metadata.title }} - {{ project }}" data-via="shomah4a">Tweet</a>
         </div>
         {{ metadata.body }}
         {{ post_meta(metadata, metadata.comment_count) }}
@@ -41,6 +41,6 @@
       }
 
     --></script>
-    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+    <!-- <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script> -->
 {% endblock %}
 
