--- a/themes/custom_minimal/aggregated.html
+++ b/themes/custom_minimal/aggregated.html
@@ -21,7 +21,8 @@
         {% set page_url = pathto(metadata.link) %}
 
         <div class="buttons" style="float:right">
-          <a href="https://twitter.com/share" class="twitter-share-button" data-url="{{ page_url }}" data-text="{{ metadata.title }} - {{ project }}" data-via="shomah4a">Tweet</a>
+          <a path="https://twitter.com/share" class="twitter-share-button" data-url="{{ page_url }}" data-text="{{ metadata.title }} - {{ project }}">Tweet</a>
+          <a href="{{ metadata.link }}" class="hatena-bookmark-button" data-hatena-bookmark-title="{{ metadata.title }} - {{ project }}" data-hatena-bookmark-layout="simple-balloon" title="このエントリーをはてなブックマークに追加"><img src="http://b.st-hatena.com/images/entry-button/button-only.gif" alt="このエントリーをはてなブックマークに追加" width="20" height="20" style="border: none;" /></a>
         </div>
         {{ metadata.body }}
         {{ post_meta(metadata, metadata.comment_count) }}
@@ -31,7 +32,7 @@
     <div class="archive_link">
         <a href="{{ pathto('archive') }}">{{ archivechar }}{{ archive_title }}{{ archivechar }}</a>
     </div>
-    <script><!--
+    <script type="text/javascript"><!--
       var items = document.getElementsByClassName('twitter-share-button');
 
       for (var idx=0; idx<items.length; idx++)
@@ -42,5 +43,16 @@
 
     --></script>
     <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+    <script type="text/javascript"><!--
+      var items = document.getElementsByClassName('hatena-bookmark-button');
+
+      for (var idx=0; idx<items.length; idx++)
+      {
+        var item = items[idx];
+        item.setAttribute('href', document.URI + item.getAttribute('path'));
+      }
+    --></script>
+    <script type="text/javascript" src="http://b.st-hatena.com/js/bookmark_button.js" charset="utf-8" async="async"></script>
+
 {% endblock %}
 
