--- a/themes/custom_minimal/page.html
+++ b/themes/custom_minimal/page.html
@@ -16,9 +16,22 @@
     {{ timestamp(metadata.formatted_date) }}
     {% block buttons %}
     <div class="buttons" style="float:right">
-      <a href="https://twitter.com/share" class="twitter-share-button" data-via="shomah4a">Tweet</a>
+      <a href="https://twitter.com/share" class="twitter-share-button">Tweet</a>
       <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+      <a href="http://b.hatena.ne.jp/entry/http://google.com/" class="hatena-bookmark-button" data-hatena-bookmark-title="{{ title }} - {{ project }}" data-hatena-bookmark-layout="simple-balloon" title="このエントリーをはてなブックマークに追加"><img src="http://b.st-hatena.com/images/entry-button/button-only.gif" alt="このエントリーをはてなブックマークに追加" width="20" height="20" style="border: none;" /></a>
     </div>
+
+    <script type="text/javascript"><!--
+      var items = document.getElementsByClassName('hatena-bookmark-button');
+
+      for (var idx=0; idx<items.length; idx++)
+      {
+        var item = items[idx];
+        item.setAttribute('href', document.URI);
+      }
+    --></script>
+
+    <script type="text/javascript" src="http://b.st-hatena.com/js/bookmark_button.js" charset="utf-8" async="async"></script>
     {% endblock %}
     {{ link }}
     {{ body }}
