add link to twitter

--- a/themes/custom_minimal/author.html
+++ b/themes/custom_minimal/author.html
@@ -8,9 +8,12 @@
 <div class="widget">
     <h3>Profile</h3>
     <div>
-      <img src="https://twimg0-a.akamaihd.net/profile_images/3073627456/353eeae99b2347863adf30bbcd61aa83.png"
-           width="64px"
-           height="64px" /><br />
+      <a href="https://twitter.com/shomah4a">
+        <img src="https://twimg0-a.akamaihd.net/profile_images/3073627456/353eeae99b2347863adf30bbcd61aa83.png"
+             width="64px"
+             height="64px" />
+      </a>
+      <br />
       どこにでもいる普通のプログラマ。<br />
       Python とかボルダリングとかバイクとか
     </div>
