--- a/themes/custom_minimal/aggregated.html
+++ b/themes/custom_minimal/aggregated.html
@@ -16,14 +16,16 @@
 {% block body %}
     {{ tinkerer_relbar() }}
     {%- for metadata in posts %}
-        {{ timestamp(metadata.formatted_date) }}
-
         {% set page_url = pathto(metadata.link) %}
 
+        <div style="margin-bottom: 1em">
         <div class="buttons" style="float:right">
           <a path="https://twitter.com/share" class="twitter-share-button" data-url="{{ page_url }}" data-text="{{ metadata.title }} - {{ project }}">Tweet</a>
           <a href="{{ metadata.link }}" class="hatena-bookmark-button" data-hatena-bookmark-title="{{ metadata.title }} - {{ project }}" data-hatena-bookmark-layout="simple-balloon" title="このエントリーをはてなブックマークに追加"><img src="http://b.st-hatena.com/images/entry-button/button-only.gif" alt="このエントリーをはてなブックマークに追加" width="20" height="20" style="border: none;" /></a>
         </div>
+        {{ timestamp(metadata.formatted_date) }}
+        </div>
+
         {{ metadata.body }}
         {{ post_meta(metadata, metadata.comment_count) }}
         {%- if not loop.last %}<div class="separator post_separator"></div>{%- endif %}
