--- a/themes/custom_minimal/page.html
+++ b/themes/custom_minimal/page.html
@@ -27,7 +27,7 @@
       for (var idx=0; idx<items.length; idx++)
       {
         var item = items[idx];
-        item.setAttribute('href', document.URI);
+        item.setAttribute('href', 'http://b.hatena.ne.jp/entry/' + window.location.host + window.location.pathname);
       }
     --></script>
 
