--- a/themes/custom_minimal/aggregated.html
+++ b/themes/custom_minimal/aggregated.html
@@ -51,7 +51,7 @@
       for (var idx=0; idx<items.length; idx++)
       {
         var item = items[idx];
-        item.setAttribute('href', 'http://b.hatena.ne.jp/entry/' + window.location.host + item.getAttribute('path'));
+        item.setAttribute('href', 'http://b.hatena.ne.jp/entry/' + window.location.host + '/' + item.getAttribute('path'));
       }
     --></script>
     <script type="text/javascript" src="http://b.st-hatena.com/js/bookmark_button.js" charset="utf-8" async="async"></script>
