--- a/themes/custom_minimal/author.html
+++ b/themes/custom_minimal/author.html
@@ -6,16 +6,21 @@
 {%- set recent_count = recent_count is not defined and 10 or recent_count %}
 
 <div class="widget">
-    <h3>Profile</h3>
+    <h3>お前、誰よ</h3>
     <div>
       <a href="https://twitter.com/shomah4a">
         <img src="https://twimg0-a.akamaihd.net/profile_images/3073627456/353eeae99b2347863adf30bbcd61aa83.png"
              width="64px"
              height="64px" />
       </a>
-      <br />
+      <p>
       どこにでもいる普通のプログラマ。<br />
       Python とかボルダリングとかバイクとか
+      </p>
+      <ul>
+        <li><a href="https://twitter.com/shomah4a">Twitter</a></li>
+        <li><a href="http://b.hatena.ne.jp/shomah4a/">はてなダイアリー</a></li>
+      </ul>
     </div>
 </div>
 
