--- a/themes/custom_minimal/author.html
+++ b/themes/custom_minimal/author.html
@@ -19,7 +19,7 @@
       </p>
       <ul>
         <li><a href="https://twitter.com/shomah4a">Twitter</a></li>
-        <li><a href="http://b.hatena.ne.jp/shomah4a/">はてなダイアリー</a></li>
+        <li><a href="http://d.hatena.ne.jp/shomah4a/">はてなダイアリー</a></li>
       </ul>
     </div>
 </div>
