--- a/themes/custom_minimal/page.html
+++ b/themes/custom_minimal/page.html
@@ -22,13 +22,11 @@
     </div>
 
     <script type="text/javascript"><!--
-      var items = document.getElementsByClassName('hatena-bookmark-button');
-
-      for (var idx=0; idx<items.length; idx++)
-      {
-        var item = items[idx];
-        item.setAttribute('href', 'http://b.hatena.ne.jp/entry/' + window.location.host + window.location.pathname);
-      }
+      $('a[class="hatena-bookmark-button"]').map(
+          function (e)
+          {
+              e.setAttribute('href', 'http://b.hatena.ne.jp/entry/' + window.location.host + window.location.pathname);
+          });
     --></script>
 
     <script type="text/javascript" src="http://b.st-hatena.com/js/bookmark_button.js" charset="utf-8" async="async"></script>
