--- a/themes/custom_minimal/aggregated.html
+++ b/themes/custom_minimal/aggregated.html
@@ -35,7 +35,7 @@
         <a href="{{ pathto('archive') }}">{{ archivechar }}{{ archive_title }}{{ archivechar }}</a>
     </div>
     <script type="text/javascript"><!--
-      $('a[class="twitter-share-button"]').map(
+      $('a[class="twitter-share-button"]').toArray().map(
           function (e)
           {
               e.setAttribute('data-url', window.location.origin + '/' + e.getAttribute('data-url'));
@@ -44,7 +44,7 @@
     --></script>
     <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
     <script type="text/javascript"><!--
-      $('a[class="hatena-bookmark-button"]').map(
+      $('a[class="hatena-bookmark-button"]').toArray().map(
           function (e)
           {
               e.setAttribute('href', 'http://b.hatena.ne.jp/entry/' + window.location.host + '/' + e.getAttribute('path'));
