--- a/themes/custom_minimal/aggregated.html
+++ b/themes/custom_minimal/aggregated.html
@@ -18,11 +18,11 @@
     {%- for metadata in posts %}
         {% set page_url = pathto(metadata.link) %}
 
-        <div class="section_head" style="margin-bottom: 1em">
+        <div class="sectionhead" style="margin-bottom: 1em">
           <div class="buttons" style="float:right">
             <a href="https://twitter.com/share" class="twitter-share-button" data-url="{{ page_url }}" data-text="{{ metadata.title }} - {{ project }}">Tweet</a>
             <a path="{{ page_url }}" class="hatena-bookmark-button" data-hatena-bookmark-title="{{ metadata.title }} - {{ project }}" data-hatena-bookmark-layout="simple-balloon" title="このエントリーをはてなブックマークに追加"><img src="http://b.st-hatena.com/images/entry-button/button-only.gif" alt="このエントリーをはてなブックマークに追加" width="20" height="20" style="border: none;" /></a>
-            <span class="hatena_star" />
+            <span class="hatenastar" />
           </div>
         {{ timestamp(metadata.formatted_date) }}
         </div>
