add hatena star

--- a/themes/custom_minimal/aggregated.html
+++ b/themes/custom_minimal/aggregated.html
@@ -18,11 +18,12 @@
     {%- for metadata in posts %}
         {% set page_url = pathto(metadata.link) %}
 
-        <div class="sectionhead" style="margin-bottom: 1em">
+        <div class="section_head" style="margin-bottom: 1em">
           <div class="buttons" style="float:right">
             <a href="https://twitter.com/share" class="twitter-share-button" data-url="{{ page_url }}" data-text="{{ metadata.title }} - {{ project }}">Tweet</a>
             <a path="{{ page_url }}" class="hatena-bookmark-button" data-hatena-bookmark-title="{{ metadata.title }} - {{ project }}" data-hatena-bookmark-layout="simple-balloon" title="このエントリーをはてなブックマークに追加"><img src="http://b.st-hatena.com/images/entry-button/button-only.gif" alt="このエントリーをはてなブックマークに追加" width="20" height="20" style="border: none;" /></a>
             <span class="hatenastar" />
+            <a style="display:none" class="parmalink_for_star" path="{{ page_url }}">a</a>
           </div>
         {{ timestamp(metadata.formatted_date) }}
         </div>
@@ -49,6 +50,13 @@
           function (e)
           {
               e.setAttribute('href', 'http://b.hatena.ne.jp/entry/' + window.location.host + '/' + e.getAttribute('path'));
+          });
+    --></script>
+    <script type="text/javascript"><!--
+      $('a[class="parmalink_for_star"]').toArray().map(
+          function (e)
+          {
+              e.setAttribute('href', window.location.origin + '/' + e.getAttribute('path'));
           });
     --></script>
     <script type="text/javascript" src="http://b.st-hatena.com/js/bookmark_button.js" charset="utf-8" async="async"></script>
