--- a/themes/custom_minimal/layout.html
+++ b/themes/custom_minimal/layout.html
@@ -11,9 +11,9 @@
       Hatena.Star.SiteConfig = {
         entryNodes: {
           'div.body': {
-            uri: 'div.section h1 a',
+            uri: 'div.section_head div.buttons a.parmalink_for_star',
             title: 'div.section h1',
-            container: 'div.sectionhead div.buttons span.hatenastar '
+            container: 'div.section_head div.buttons span.hatenastar'
           }
         }
       };
