--- a/themes/custom_minimal/page.html
+++ b/themes/custom_minimal/page.html
@@ -14,8 +14,11 @@
 {% block body %}
     {{ tinkerer_relbar() }}
     <div class="section_head" style="margin-bottom: 1em">
+    <div style="float:left; margin-right:2em">
+      {{ timestamp(metadata.formatted_date) }}
+    </div>
     {% block buttons %}
-    <div class="buttons" style="float:right">
+    <div class="buttons">
       <a href="https://twitter.com/share" class="twitter-share-button">Tweet</a>
       <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
       <a href="http://b.hatena.ne.jp/entry/http://google.com/" class="hatena-bookmark-button" data-hatena-bookmark-title="{{ title }} - {{ project }}" data-hatena-bookmark-layout="simple-balloon" title="このエントリーをはてなブックマークに追加"><img src="http://b.st-hatena.com/images/entry-button/button-only.gif" alt="このエントリーをはてなブックマークに追加" width="20" height="20" style="border: none;" /></a>
@@ -41,7 +44,6 @@
           });
     --></script>
     {% endblock %}
-    {{ timestamp(metadata.formatted_date) }}
     </div>
     {{ link }}
     {{ body }}
