--- a/themes/custom_minimal/page.html
+++ b/themes/custom_minimal/page.html
@@ -13,8 +13,8 @@
 
 {% block body %}
     {{ tinkerer_relbar() }}
-    <div class="section_head" style="margin-bottom: 1em">
-    <div style="float:left; margin-right:2em">
+    <div class="section_head">
+    <div class="timestamp_layout">
       {{ timestamp(metadata.formatted_date) }}
     </div>
     {% block buttons %}
