--- a/themes/custom_minimal/page.html
+++ b/themes/custom_minimal/page.html
@@ -23,10 +23,10 @@
       <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
       <a href="http://b.hatena.ne.jp/entry/http://google.com/" class="hatena-bookmark-button" data-hatena-bookmark-title="{{ title }} - {{ project }}" data-hatena-bookmark-layout="simple-balloon" title="このエントリーをはてなブックマークに追加"><img src="http://b.st-hatena.com/images/entry-button/button-only.gif" alt="このエントリーをはてなブックマークに追加" width="20" height="20" style="border: none;" /></a>
       <span class="hatenastar"> </span>
+
+      {# パーマリンクのための URL 生成してつけるためのタグ #}
       <a style="display:none" class="parmalink_for_star">a</a>
     </div>
-
-
 
     <script type="text/javascript"><!--
       $('a[class="hatena-bookmark-button"]').toArray().map(
