add link to hateda

--- a/themes/custom_minimal/author.html
+++ b/themes/custom_minimal/author.html
@@ -17,6 +17,8 @@
       どこにでもいる普通のプログラマ。<br />
       Python とかボルダリングとかバイクとか
       </p>
+
+      <p>一冊目は<a href="http://d.hatena.ne.jp/shomah4a">こちら</a></p>
     </div>
 </div>
 
