--- a/themes/custom_minimal/author.html
+++ b/themes/custom_minimal/author.html
@@ -13,6 +13,7 @@
              width="64px"
              height="64px" />
       </a>
+      <h4>shomah4a</h4>
       <p>
       どこにでもいる普通のプログラマ。<br />
       Python とかボルダリングとかバイクとか
