--- a/themes/custom_minimal/layout.html
+++ b/themes/custom_minimal/layout.html
@@ -5,6 +5,7 @@
 
 {% block extrahead %}
     <script type="text/javascript" src="http://s.hatena.ne.jp/js/HatenaStar.js"></script>
+    <script type="text/javascript" src="http://b.st-hatena.com/js/bookmark_button.js" charset="utf-8" async="async"></script>
     <script type="text/javascript">
       Hatena.Star.Token = '9db4cf1b05d315b16218f1498cd747641271ee64';
 
