update about page

--- a/themes/custom_minimal/author.html
+++ b/themes/custom_minimal/author.html
@@ -9,17 +9,17 @@
     <h3>お前、誰よ</h3>
     <div>
       <a href="https://twitter.com/shomah4a">
-        <img src="https://twimg0-a.akamaihd.net/profile_images/3073627456/353eeae99b2347863adf30bbcd61aa83.png"
+        <img src="https://pbs.twimg.com/profile_images/441944927832788992/K_onphWD.png"
              width="64px"
              height="64px" />
       </a>
       <h4>shomah4a</h4>
       <p>
       どこにでもいる普通のプログラマ。<br />
-      Python とかボルダリングとかバイクとか
+      Python とかボルダリングとかバイクとか。
+      ナナハン乗り。
       </p>
 
       <p>一冊目は<a href="http://d.hatena.ne.jp/shomah4a">こちら</a></p>
     </div>
 </div>
-
