サイドに電書追加

--- a/themes/custom_minimal/advertise.html
+++ b/themes/custom_minimal/advertise.html
@@ -8,7 +8,11 @@
 <div class="widget">
     <h3>こんなの書きました</h3>
     <div>
+      <h4>書籍</h4>
 <iframe src="http://rcm-jp.amazon.co.jp/e/cm?lt1=_blank&bc1=000000&IS2=1&bg1=FFFFFF&fc1=000000&lc1=0000FF&t=shomah4a-22&o=9&p=8&l=as4&m=amazon&f=ifr&ref=ss_til&asins=477415539X" style="width:120px;height:240px;" scrolling="no" marginwidth="0" marginheight="0" frameborder="0"></iframe>
+
+       <h4>電子書籍</h4>
+<iframe src="http://rcm-jp.amazon.co.jp/e/cm?asins=B00P2EG5QM&amp;bg1=FFFFFF&amp;fc1=000000&amp;lc1=0000FF&amp;o=9&amp;p=8&amp;l=as4&amp;m=amazon&amp;f=ifr&amp;ref=ss_til&amp;t=shomah4a-22&amp;lt1=_blank&amp;bc1=000000&amp;IS2=1" style="width:120px;height:240px;" scrolling="no" marginwidth="0" marginheight="0" frameborder="0"> </iframe>
     </div>
 </div>
 
